tests/rosetta/out/C/arithmetic-rational.error
cc: exit status 1
/tmp/arithmetic-rational.c: In function ‘main’:
/tmp/arithmetic-rational.c:97:17: error: subscripted value is neither array nor pointer nor vector
   97 |     int n = tmp1[tmp2];
      |                 ^
/tmp/arithmetic-rational.c:111:40: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  111 |       char *tmp9 = concat_string(tmp8, perfect);
      |                                        ^~~~~~~
/tmp/arithmetic-rational.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/arithmetic-rational.c: At top level:
/tmp/arithmetic-rational.c:117:5: error: redefinition of ‘main’
  117 | int main() {
      |     ^~~~
/tmp/arithmetic-rational.c:75:5: note: previous definition of ‘main’ with type ‘int()’
   75 | int main() {
      |     ^~~~
