tests/rosetta/out/C/arithmetic-rational.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:18Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int intSqrt(int x) {
  if (x < 2) {
    return x;
  }
  int left = 1;
  double right = ((double)x) / ((double)2);
  int ans = 0;
  while (left <= right) {
    double mid = left + (right - left) / 2;
    double sq = mid * mid;
    if (sq == x) {
      return mid;
    }
    if (sq < x) {
      left = mid + 1;
      ans = mid;
    } else {
      right = mid - 1;
    }
  }
  return ans;
}

int sumRecip(int n) {
  int s = 1;
  int limit = intSqrt(n);
  int f = 2;
  while (f <= limit) {
    if (n % f == 0) {
      s = ((double)s + n) / ((double)f);
      double f2 = ((double)n) / ((double)f);
      if (f2 != f) {
        s = s + f;
      }
    }
    f = f + 1;
  }
  return s;
}

int main() {
  list_int nums = list_int_create(9);
  nums.data[0] = 6;
  nums.data[1] = 28;
  nums.data[2] = 120;
  nums.data[3] = 496;
  nums.data[4] = 672;
  nums.data[5] = 8128;
  nums.data[6] = 30240;
  nums.data[7] = 32760;
  nums.data[8] = 523776;
  list_int tmp1 = list_int_create(9);
  tmp1.data[0] = 6;
  tmp1.data[1] = 28;
  tmp1.data[2] = 120;
  tmp1.data[3] = 496;
  tmp1.data[4] = 672;
  tmp1.data[5] = 8128;
  tmp1.data[6] = 30240;
  tmp1.data[7] = 32760;
  tmp1.data[8] = 523776;
  for (int tmp2 = 0; tmp2 < 9; tmp2++) {
    int n = tmp1[tmp2];
    int s = sumRecip(n);
    if (s % n == 0) {
      double val = ((double)s) / ((double)n);
      const char *perfect = "";
      if (val == 1) {
        perfect = "perfect!";
      }
      char *tmp3 = _str(n);
      char *tmp4 = concat_string("Sum of recipr. factors of ", tmp3);
      char *tmp5 = concat_string(tmp4, " = ");
      char *tmp6 = _str(val);
      char *tmp7 = concat_string(tmp5, tmp6);
      char *tmp8 = concat_string(tmp7, " exactly ");
      char *tmp9 = concat_string(tmp8, perfect);
      printf("%s\n", tmp9);
    }
  }
}

int main() {
  main();
  return 0;
}
